--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML & CSS Udemy Course</title>
+    <link rel="stylesheet" type="text/css" href="styles/mainstyle.css">
 </head>
 <body>
-    <h1>Testing my Git and Github repository</h1>
-    <hr>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam magni numquam quis! Officia quo quibusdam facere in sequi deserunt ullam praesentium recusandae aperiam molestias animi, ipsa harum deleniti dolore ad.</p>
+        <h1>This is my first Blogpost</h1>
+        <h2>My first Blogpost</h2>
+        <p class="maintext">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit maiores totam fugiat possimus unde? Officia repellendus nisi consequatur, eligendi, consequuntur reiciendis aspernatur laborum dicta ratione, possimus tempore veritatis ab facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor cum et recusandae earum pariatur delectus rem. Quibusdam, sed delectus? Explicabo hic iure quia nobis illo assumenda recusandae reiciendis id? Error! Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laboriosam quos alias rerum, id dolore beatae cum quo, nesciunt ab nulla quisquam sit praesentium magni, maiores odit numquam recusandae inventore!</p>
+
+        <img class="medium" src="images/html-css.png" alt="html and css">
+        <br>
+        <a href="images/html-css.png" target="_blank">HTML/CSS logo</a>
+        <a href="http://www.udemy.com" target="_blank">Udemy Website</a>
+        <h2>HTML is Amazing!</h2>
+        <p class="maintext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus consectetur in soluta totam ipsum vero cupiditate eveniet quas expedita dolor molestias, ea blanditiis quisquam, quibusdam excepturi omnis modi. Omnis, culpa? Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio beatae facere ratione ea mollitia corporis accusantium, iure vero cumque accusamus iste animi, sint debitis earum ad recusandae repellendus obcaecati reiciendis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam obcaecati odio cumque alias dignissimos accusamus tenetur optio, impedit quidem minima minus nobis autem voluptas ducimus dolore fugit. Officiis, placeat cumque?</p>
+
+        <img class="small" src="images/author.jpg" alt="Brooklyn Wood">
+        <p id="author">Brooklyn Wood</p>
 </body>
-</html>
+</html> 
