--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML & CSS Udemy Course</title>
     <link rel="stylesheet" type="text/css" href="styles/mainstyle.css">
+    <style>
+        h1
+{
+    text-decoration: underline line-through overline;
+}
+    </style>
 </head>
 <body>
-        <h1>This is my first Blogpost</h1>
+        <h1 translate="no">This is my first Blogpost</h1>
+        
         <h2>My first Blogpost</h2>
         <p class="maintext">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit maiores totam fugiat possimus unde? Officia repellendus nisi consequatur, eligendi, consequuntur reiciendis aspernatur laborum dicta ratione, possimus tempore veritatis ab facere. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor cum et recusandae earum pariatur delectus rem. Quibusdam, sed delectus? Explicabo hic iure quia nobis illo assumenda recusandae reiciendis id? Error! Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit laboriosam quos alias rerum, id dolore beatae cum quo, nesciunt ab nulla quisquam sit praesentium magni, maiores odit numquam recusandae inventore!</p>
 
